# vex-reader

./: .gitignore  COPYRIGHT  Makefile  README.md  SECURITY.md  TESTING.md  install-hooks.sh  pyproject.toml  requirements.txt  run_tests.py  security-insights.yml  vex-reader.py  vex-reader1.py
.github/workflows/: scorecard.yml  test.yml
examples/: vex-counter.py
hooks/: pre-commit
tests/: cisco-sa-openssh-rce-2024.json  cve-2002-0803.json  cve-2021-44228.json  cve-2024-21626.json  cve-2024-40951.json  cve-2025-29087.json  cve-2025-58443.json  cve-2025-59840.json  suse-cve-2014-0160.json  test_vex1.py
vex/: __init__.py  constants.py  package.py  simplecve.py  simplecvss.py  simplenvd.py  vex.py  vex1.py  vex_reader.py
