[project]
name = "vex-reader"
version = "0.9.2"
authors = [
  { name="Vincent Danen", email="vdanen@annvix.com" },
]
description = "Read VEX files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.32.3",
    "rich>=13.7.1",
    "pytz>=2024.2"
]

[project.urls]
Homepage = "https://github.com/vdanen/vex-reader"
Issues = "https://github.com/vdanen/vex-reader/issues"
